k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: healthcare
  labels:
    app.kubernetes.io/part-of: healthcare-sys
